fixed an issue with flickering fonts and commented code. Also added a Template folder to show an example component that can be built off of.

--- a/src/components/WebsiteSections/Landing/LandingSection.css
+++ b/src/components/WebsiteSections/Landing/LandingSection.css
@@ -1,8 +1,13 @@
 .mainTextContainer {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     color: white;
     font-size: 7vw;
     text-align: center;
-    cursor:default;
+    cursor: default;
+    font-family: Arial;
 }
 
 .boldText {
